Fix sample height and draw line where sample was taken
* Remove canvas border and header
* Set canvas width / height in html
* Get rid of for loop to sample across image - just use a single
  sample that covers the whole image, 1px high
* Add function that draws line where the sample came from

--- a/style.css
+++ b/style.css
@@ -383,5 +383,5 @@ table {
 canvas {
 	width: 480px;
 	height: 320px;
-	border: 1px dotted #d9d9d9;
+	position: relative;
 }
